# gp-cli

./: .gitignore  CMakeLists.txt  README.md  convertmesh.cpp  decimate.cpp  draw_frame_to_png.h  mergestl.cpp  meshboolean.cpp  meshstatistics.cpp  minkowski.cpp  reorient.cpp  resolvemesh.cpp  scrubmesh.cpp  splitnonmanifold.cpp  upright.cpp  viewmesh.cpp
cmake/: FindLIBIGL.cmake  FindMATLAB.cmake  FindTINYXML2.cmake  libigl.cmake
